[package]
name = "distortion"
version = "0.1.1"
edition = "2021"
authors = ["Renzo Ledesma <renzol2@illinois.edu>"]
license = "GPL-3.0-or-later"
homepage = "https://renzomledesma.me"
description = "Algorithms of nonlinear systems for distortion effects"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
approx = "0.5.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
